--- a/app.css
+++ b/app.css
@@ -1,13 +1,32 @@
 html, body {
-    margin:0;
-    padding:0;
     height:100%;
     min-height:100%;
-    font-size:16px;
     color:#222222;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-button {
-    cursor:pointer;
+body {
+    background-image:url('images/field.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:bottom center;
 }
+
+#heading {color:#001c88;}
+
+button {cursor:pointer;}
+
+.form-control {
+    display:inline-block;
+    max-width:320px;
+}
+
+#mainWrapper {
+    background:#EEEEEE;
+    max-width:1000px;
+    margin:0 auto;
+    box-shadow:0 0 12px 0 #000000;
+    padding:20px;
+    height:94%;
+}
+
+.hide {display:none;}
