--- a/app.css
+++ b/app.css
@@ -2,6 +2,7 @@ html, body {
     height:100%;
     min-height:100%;
     color:#222222;
+    background-color:#000000;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
     background-repeat:no-repeat;
     background-size:cover;
     background-position:bottom center;
+    opacity:.9;
 }
 
 #heading {color:#001c88;}
@@ -26,7 +28,39 @@ button {cursor:pointer;}
     margin:0 auto;
     box-shadow:0 0 12px 0 #000000;
     padding:20px;
-    height:94%;
+    height:100%;
+    position:relative;
 }
 
 .hide {display:none;}
+
+.padRow {
+    padding:20px 0;
+}
+
+#scoreBoard tr:nth-child(even) {
+    background:#555555;
+}
+
+.current {background:lightgreen;}
+
+#statusLogButton {
+    cursor:pointer;
+    position:absolute;
+    right:20px;
+    top:28px;
+}
+
+#statusLog {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top:0;
+}
+
+#closeStatusLog {
+    position:absolute;
+    top:10px;
+    right:10px;
+    cursor:pointer;
+}
