--- a/app.css
+++ b/app.css
@@ -1,66 +1,23 @@
-html, body {
+html,body {
+    margin:0;
+    padding:0;
+    width:100%;
+    height:100%;
     height:100%;
     min-height:100%;
-    color:#222222;
-    background-color:#000000;
 }
 
 body {
-    background-image:url('images/field.jpg');
+    background-image:url('https://bjwtech.com/bg.jpeg');
     background-repeat:no-repeat;
     background-size:cover;
-    background-position:bottom center;
-    opacity:.9;
-}
-
-#heading {color:#001c88;}
-
-button {cursor:pointer;}
-
-.form-control {
-    display:inline-block;
-    max-width:320px;
+    background-position:bottom;
 }
 
 #mainWrapper {
-    background:#EEEEEE;
+    height:100%;
     max-width:1000px;
     margin:0 auto;
-    box-shadow:0 0 12px 0 #000000;
-    padding:20px;
-    height:100%;
-    position:relative;
-}
-
-.hide {display:none;}
-
-.padRow {
-    padding:20px 0;
-}
-
-#scoreBoard tr:nth-child(even) {
-    background:#555555;
-}
-
-.current {background:lightgreen;}
-
-#statusLogButton {
-    cursor:pointer;
-    position:absolute;
-    right:20px;
-    top:28px;
-}
-
-#statusLog {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top:0;
-}
-
-#closeStatusLog {
-    position:absolute;
-    top:10px;
-    right:10px;
-    cursor:pointer;
+    background:#EEEEEE;
+    box-shadow:0 0 10px 0 #000000;
 }
