updated background image, added keyboard accessibility for easier set up and score keeping

--- a/css/app.css
+++ b/css/app.css
@@ -6,10 +6,10 @@ html, body {
 }
 
 body {
-    background-image:url('https://bjwtech.com/bg.jpg');
+    background-image:url('../images/bg.jpg');
     background-repeat:no-repeat;
     background-size:cover;
-    background-position:bottom;
+    background-position:top;
 }
 
 #mainWrapper {
